<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.AddExam">
    <include layout="@layout/toolbar"
             android:id="@+id/addExamToolbar"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/saveRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="-25dp"
            tools:layout_editor_absoluteX="25dp">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveExam"
                app:layout_dodgeInsetEdges="bottom"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="#fff"
                android:background="@drawable/button_corner_radius"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="30dp"
        />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                   android:layout_height="wrap_content"

                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="32dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="32dp"
                                                   app:layout_constraintHorizontal_bias="0.0"
                                                   app:errorEnabled="true" android:layout_marginTop="16dp"
                                                   app:layout_constraintTop_toBottomOf="@+id/addExamToolbar"
                                                   android:id="@+id/examTitle">
        <androidx.appcompat.widget.AppCompatEditText android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     android:hint="@string/exam_title"
                                                     android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/marks_for_each_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/examTitle"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/examTitle"
            android:layout_marginTop="32dp" android:textSize="18sp" android:textStyle="bold"
            android:textColor="#404040"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:theme="@style/AppTheme.Picker"
            android:id="@+id/marksList" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10" app:layout_constraintEnd_toEndOf="@+id/examTitle"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintVertical_bias="0.526"/>

    <TextView
            android:text="@string/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textSize="18sp" android:textStyle="bold" android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/_00_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timerValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15" android:layout_marginStart="8dp"
            android:textSize="18sp"/>
    <!--<NumberPicker
            app:layout_constraintStart_toEndOf="@+id/textView15"
            android:id="@+id/minute_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/textView16"
            app:layout_constraintBottom_toBottomOf="@+id/textView15" android:layout_marginStart="8dp"/>
    <TextView
            android:text="min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/minute_picker"
            app:layout_constraintEnd_toStartOf="@+id/second_spinner"
            android:id="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/minute_picker"
            app:layout_constraintBottom_toBottomOf="@+id/minute_picker" app:layout_constraintVertical_bias="0.51"
            android:layout_marginStart="2dp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_spinner"
            app:layout_constraintTop_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toStartOf="@+id/textView17"
            app:layout_constraintBottom_toBottomOf="@+id/textView16" android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/textView16" android:layout_marginEnd="2dp"/>
    <TextView
            android:text="sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/second_spinner"
            android:id="@+id/textView17"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/second_spinner"
            app:layout_constraintTop_toTopOf="@+id/second_spinner" app:layout_constraintVertical_bias="0.4"/>
    <TextView
            android:text="For whole Exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:layout_marginTop="8dp" android:textStyle="bold"/>-->

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:src="@drawable/ic_timer"
               app:layout_constraintBottom_toBottomOf="@+id/textView15"
               app:layout_constraintTop_toTopOf="@+id/textView15"
               android:id="@+id/imageView" app:layout_constraintStart_toStartOf="@+id/textView10"/>
    <TextView
            android:text="@string/add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickTimer" android:textColor="#374CC2"
            app:layout_constraintTop_toTopOf="@+id/timerValue"
            app:layout_constraintBottom_toBottomOf="@+id/timerValue"
            app:layout_constraintStart_toEndOf="@+id/timerValue"
            android:layout_marginStart="10dp"
            android:padding="4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>